--- a/myfirstwebapp/pom.xml
+++ b/myfirstwebapp/pom.xml
@@ -22,6 +22,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- validation 보안 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- Tomcat 서버의 Jasper JSP 엔진을 내장하는 데 사용됨 -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -62,7 +68,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.6.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap-datepicker</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
