--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.mvc.view.suffix=.jsp
 # /WEB-INF/jsp/login.jsp => View Resolver
 logging.level.org.springframework=info
 logging.level.com.in28minutes.springboot.myfirstwebapp=info
+
+spring.mvc.format.date=yyyy-MM-dd
