--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=restful-web-services
 server.port=8081
 
 #logging.level.org.springframework=info
+spring.mvc.hiddenmethod.filter.enabled=true
